# NocturneSDK

./: .gitignore  CMakeLists.txt  README.md
cmake/: includes.cmake
common/: testing.c
examples/: hello_world.c
libc/: CMakeLists.txt  compile_flags.txt
libc/include/: common.h  env.h  exit.h  file.h  keyboard.h  keymap.h  memory.h  mouse.h  printf.h  rand.h  screen.h  sdtio.h  sprintf.h  stddef.h  stdint.h  string.h  syscall.h  time.h  timer.h  tty.h
libc/src/: __init.S  crt0.S  env.c  exit.c  file.c  keyboard.c  memory.c  mouse.c  printf.c  rand.c  sprintf.c  string.c  syscall.c  time.c  timer.c  tty.c
libc/src/string/: atoi.c  itoa.c  memcmp.c  memcpy.c  memmove.c  memset.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strncmp.c  strncpy.c  strspn.c  strstr.c  strtolower.c  strtoupper.c  strver.c  substr.c
libm/: CMakeLists.txt  compile_flags.txt
libm/include/: math.h
libm/src/: acos.c  asin.c  atan.c  cbrt.c  cos.c  exp.c  integral.c  log.c  math.c  modf.c  pow.c  sin.c  sqrt.c  tan.c
tools/: nocturneos-cc.py
